fix(plugins): re-instantiate stale-LOADED definitions on auto-load
The load guards in loadJob and loadAllEnabled treated a persisted
loadStatus of LOADED as proof the plugin was in the registry. But the
registry is in-memory and resets on restart, so after a restart the DB
said LOADED while the registry was empty: auto-load logged 'already
loaded' and skipped re-instantiation, leaving plugins inactive and the
plugins health group DOWN until a manual reload.

Determine 'already loaded' from the live registry
(PluginRegistryService.getRegisteredJobNames) instead of the persisted
status. Also harden getRegisteredJobNames to return an immutable snapshot
under the registry monitor — it previously returned a live keySet() view
that races with concurrent register/unregister, which the new guard
callers would have exercised.

Tests: integration test reproduces the restart state (LOADED in DB, empty
registry, asserted precondition) and the loadJob unit test now uses a
non-LOADED status so the throw is driven purely by registry presence.